--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "zeeone.js",
   "license": "MIT",
   "scripts": {
-    "start": "node zeeone.js"
+    "start": "zeeone.js"
    },
   "keywords": [
     "whatsapp",
